Revert "Revert "3) guarding domain invariants via Domain Model methods""
This reverts commit 755c026de987cfa484fd1794eff58f7946698f00.
