# clean-application/src/test/resources/my-existing-openapi.json
@@ -136,39 +136,6 @@
         }
       }
     },
-    "/customers": {
-      "post": {
-        "tags": [
-          "customer-controller"
-        ],
-        "operationId": "register",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CustomerDto"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "404": {
-            "description": "Not Found",
-            "content": {
-              "application/hal+json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/customers/search": {
       "post": {
         "tags": [
@@ -209,6 +176,39 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/customer": {
+      "post": {
+        "tags": [
+          "customer-controller"
+        ],
+        "operationId": "register",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CustomerDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/hal+json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "OK"
           }
         }
       }
